<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rouge"
    android:contentDescription="co"
    android:onClick="on_click_x"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/Click"
        android:textColor="@color/Blanc"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/Pres"
        android:textColor="@color/Blanc"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/goodies"
        android:textColor="@color/Blanc"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_centerVertical="true"
        android:background="@android:color/black"
        android:onClick="on_click_x"
        android:text="@string/Cav"
        android:textColor="@color/Blanc"
        android:textSize="35sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="27dp"
        android:background="@android:color/black"
        android:onClick="on_click_create"
        android:text="@string/C"
        android:textColor="@color/Blanc"
        android:textSize="35sp" />

</RelativeLayout>