<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ArtisteActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Ajout"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:text="@string/Nom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="31dp"
        android:text="@string/Pun"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_centerVertical="true"
        android:ems="10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/button1"
        android:onClick="on_click_cancel"
        android:text="@string/Ann" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentRight="true"
        android:onClick="on_click_t2"
        android:text="Importer Photo"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="27dp"
        android:onClick="on_click_t"
        android:text="Prendre photo"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Button01"
        android:layout_marginBottom="14dp"
        android:onClick="on_click_save"
        android:text="@string/Enre" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginBottom="15dp"
        android:text="@string/imm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/Immmaa" />

</RelativeLayout>
