<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DossierActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_marginBottom="38dp"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@+id/textView6"
        android:text="TextView" />

    <Button
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:onClick="on_click_retour"
        android:text="@string/Ret"
        android:textSize="15sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:onClick="on_click_suppr"
        android:text="@string/Supress"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/Pun"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:onClick="on_click_multi"
        android:text="Voir les fichiers associés (Photos, Videos)" />

</RelativeLayout>
